(CFACT-227) Move logging and boost-nowide into leatherman
This vendors boost-nowide instead of making it a submodule, in order
to avoid recursive submodules.

I also pulled basic CFLAG setting out of cfacter, since leatherman
needs the logic to build itself as C++11. This means cfacter now
relies on leatherman to set up its core cflags as well (to ensure we
don't screw up our ABI between leatherman libraries and the apps that
use it)

--- a/locale/CMakeLists.txt
+++ b/locale/CMakeLists.txt
@@ -7,6 +7,7 @@ else()
 endif()
 
 include_directories(${Boost_INCLUDE_DIRS})
+add_leatherman_deps("${Boost_FILESYSTEM_LIBRARY}" "${Boost_SYSTEM_LIBRARY}")
 
 add_leatherman_library(${LEATHERMAN_LOCALE_SRCS})
-set_dependencies("${Boost_FILESYSTEM_LIBRARY}" "${Boost_SYSTEM_LIBRARY}")
+
