(CFACT-232) Get unit tests to actually run correctly
Previously, we were always generating an executable with no
tests. Catch uses the "Create a global object and let its constructor
register it" pattern for tracking tests. This falls over when tests
are in static libraries, since the linker discards the object files as
"unused" without realizing that constructors need to be called.

This commit fixes up the linker flags to ensure the tests are actually
brought in, and does some fidgeting with library order to make
everything sane/stable.

--- a/locale/CMakeLists.txt
+++ b/locale/CMakeLists.txt
@@ -1,4 +1,4 @@
-find_package(Boost 1.54 REQUIRED COMPONENTS system filesystem)
+find_package(Boost 1.54 REQUIRED COMPONENTS system filesystem thread)
 
 if(WIN32)
     set(LEATHERMAN_LOCALE_SRCS "src/windows/locale.cc")
@@ -7,7 +7,7 @@ else()
 endif()
 
 include_directories(${Boost_INCLUDE_DIRS})
-add_leatherman_deps("${Boost_FILESYSTEM_LIBRARY}" "${Boost_SYSTEM_LIBRARY}")
+add_leatherman_deps("${Boost_THREAD_LIBRARY}" "${Boost_SYSTEM_LIBRARY}" "${Boost_FILESYSTEM_LIBRARY}")
 
 add_leatherman_library(${LEATHERMAN_LOCALE_SRCS})
 
