--- a/locale/CMakeLists.txt
+++ b/locale/CMakeLists.txt
@@ -7,7 +7,7 @@ endif()
 
 find_package(Boost 1.54 REQUIRED COMPONENTS system filesystem thread ${PLATFORM_COMPONENTS})
 
-include_directories(${Boost_INCLUDE_DIRS})
+add_leatherman_includes(${Boost_INCLUDE_DIRS})
 add_leatherman_deps("${Boost_THREAD_LIBRARY}" "${Boost_SYSTEM_LIBRARY}" "${Boost_FILESYSTEM_LIBRARY}")
 if (WIN32)
     add_leatherman_deps("${Boost_LOCALE_LIBRARY}")
