(LTH-58) Add message localization and translation support (i18n)
Adds i18n support via Boost.Locale. Adds several facilities to make this
easy to use, while supporting safe fall-back on platforms where
Boost.Locale doesn't work (Solaris and AIX).

----
Adds a macro, and uses it in Leatherman, to create a target to generate
a translation template for use with gettext. That file will only be
regenerated when the source changes. New messages will be merged into
the existing translation template.

----
Message catalogs for languages can be generated and kept up-to-date by
setting `LEATHERMAN_LOCALES="lang1;lang2;etc"` during cmake
configuration. This is done via a new build target.

----
Adds the `leatherman::locale::format` helper, to be used in place of
`boost::format`. It translates the string passed in, avoiding the
`boost::locale::format(boost::locale::translate(...))` pattern. It's
implemented via a helper class that allows specifying a locale domain
for string translation.

Use a hash_map to keep track of locales by domain. Translation should
use the locale::translate or locale::format helper, which defaults to
the domain of the current project.

----
Allow setting locale lookup paths for testing in projects using
installed Leatherman. Without this change the location would be
hard-coded into installed Leatherman objects.

Use CMAKE_BINARY_DIR to put all .mo files in the same location in a
build, so tests can easily find all translation files.

----
Adds a LEATHERMAN_ENABLE_LOCALE option to control when gettext and
Boost.Locale should be used. Disabled by default on Solaris and AIX.

Also make whether leatherman::locale::format uses boost::locale::format
or boost::format configurable by the project; they use different
substitution strings, so using boost::locale::format is opt-in. The
boost::format behavior will translate from boost::locale::format
substitution characters so the same string can be used in a project
using the i18n support on platforms that don't c

--- a/locale/CMakeLists.txt
+++ b/locale/CMakeLists.txt
@@ -1,16 +1,25 @@
-if(WIN32)
-    set(LEATHERMAN_LOCALE_SRCS "src/windows/locale.cc")
+if (LEATHERMAN_ENABLE_LOCALE)
     find_package(Boost 1.54 REQUIRED COMPONENTS locale system)
 else()
-    set(LEATHERMAN_LOCALE_SRCS "src/posix/locale.cc")
-    find_package(Boost 1.54 REQUIRED)
+    find_package(Boost 1.54 REQUIRED regex)
 endif()
-
 
 add_leatherman_includes(${Boost_INCLUDE_DIRS})
-if (WIN32)
-    add_leatherman_deps("${Boost_LIBRARIES}")
+add_leatherman_deps(${Boost_LIBRARIES})
+
+add_leatherman_headers(inc/leatherman)
+
+if (LEATHERMAN_ENABLE_LOCALE)
+    add_leatherman_library(src/locale.cc)
+    add_leatherman_test(tests/locale.cc)
+else()
+    add_leatherman_library(disabled/locale.cc)
 endif()
 
-add_leatherman_library(${LEATHERMAN_LOCALE_SRCS})
-add_leatherman_headers(inc/leatherman)
+add_leatherman_test(tests/format.cc)
+
+if (BUILDING_LEATHERMAN)
+    project(leatherman_test)
+    gettext_templates(${CMAKE_CURRENT_SOURCE_DIR}/locales ${CMAKE_CURRENT_SOURCE_DIR}/tests/locale.cc)
+    gettext_compile(${CMAKE_CURRENT_SOURCE_DIR}/locales share/locale)
+endif()
