(maint) Fix Locale with BOOST_SYSTEM_NO_DEPRECATED
Using BOOST_SYSTEM_NO_DEPRECATED on Windows, a Boost distribution built
without that flag will have an unresolved symbol dependency in
Boost.Locale without linking Boost.System. Add the Boost.System
dependency.

--- a/locale/CMakeLists.txt
+++ b/locale/CMakeLists.txt
@@ -1,6 +1,6 @@
 if(WIN32)
     set(LEATHERMAN_LOCALE_SRCS "src/windows/locale.cc")
-    find_package(Boost 1.54 REQUIRED COMPONENTS locale)
+    find_package(Boost 1.54 REQUIRED COMPONENTS locale system)
 else()
     set(LEATHERMAN_LOCALE_SRCS "src/posix/locale.cc")
     find_package(Boost 1.54 REQUIRED)
@@ -9,7 +9,7 @@ endif()
 
 add_leatherman_includes(${Boost_INCLUDE_DIRS})
 if (WIN32)
-    add_leatherman_deps("${Boost_LOCALE_LIBRARY}")
+    add_leatherman_deps("${Boost_LIBRARIES}")
 endif()
 
 add_leatherman_library(${LEATHERMAN_LOCALE_SRCS})
