(maint) Disable localization test without gettext
When gettext isn't available, some locale tests will fail because they
rely on generating the .mo translation files. Some projects that don't
support localization yet won't have gettext, but should still be able
to run unit tests successfully. Disable the i18n related unit tests if
gettext is unavailable.

--- a/locale/CMakeLists.txt
+++ b/locale/CMakeLists.txt
@@ -11,7 +11,13 @@ add_leatherman_headers(inc/leatherman)
 
 if (LEATHERMAN_USE_LOCALES)
     add_leatherman_library(src/locale.cc)
-    add_leatherman_test(tests/locale.cc)
+    if (GETTEXT_ENABLED)
+        # This test relies on translation .mo files being generated.
+        # Projects that don't support localization yet still need
+        # tests to pass, so only enable these tests if gettext is
+        # available.
+        add_leatherman_test(tests/locale.cc)
+    endif()
 else()
     add_leatherman_library(disabled/locale.cc)
 endif()
