(LTH-87) Fix build on OS X
Building with static boost libraries on Mac OS X fails because
Boost.Locale requires iconv. Add iconv as a dependency on Mac OS X when
building against static boost.

--- a/locale/CMakeLists.txt
+++ b/locale/CMakeLists.txt
@@ -7,6 +7,13 @@ endif()
 add_leatherman_includes(${Boost_INCLUDE_DIRS})
 add_leatherman_deps(${Boost_LIBRARIES})
 
+if (LEATHERMAN_USE_LOCALES AND BOOST_STATIC AND APPLE)
+    # Boost.Locale relies on libiconv; if not using shared boost libraries
+    # we need to include the dependency ourselves. So far this is only a
+    # problem on Mac OS X.
+    add_leatherman_deps(iconv)
+endif()
+
 add_leatherman_headers(inc/leatherman)
 
 if (LEATHERMAN_USE_LOCALES)
