(LTH-96) Prevent locale files from being cleaned
Previously `make clean` would delete generated locale files. Prevent
that from happening, as the file generation is only meant as a
bootstrapping step; .po files are then checked in and updated over time.

This fix only works for `make`, as CMake's documentation notes it can't
be implemented for other generators.

--- a/locale/CMakeLists.txt
+++ b/locale/CMakeLists.txt
@@ -31,8 +31,7 @@ endif()
 
 add_leatherman_test(tests/format.cc)
 
-if (BUILDING_LEATHERMAN)
+if (LEATHERMAN_USE_LOCALES AND BUILDING_LEATHERMAN)
     project(leatherman_test)
-    gettext_templates(${CMAKE_CURRENT_SOURCE_DIR}/locales ${CMAKE_CURRENT_SOURCE_DIR}/tests/locale.cc)
-    gettext_compile(${CMAKE_CURRENT_SOURCE_DIR}/locales share/locale)
+    add_subdirectory(locales)
 endif()
