(LTH-83) Add context and plural support to Leatherman.Locale
Adds context and plural support, based on the pattern from Boost.Locale,
to the Leatherman.Locale `translate` functions.

--- a/locale/CMakeLists.txt
+++ b/locale/CMakeLists.txt
@@ -32,6 +32,6 @@ endif()
 add_leatherman_test(tests/format.cc)
 
 if (LEATHERMAN_USE_LOCALES AND BUILDING_LEATHERMAN)
-    project(leatherman_test)
+    project(leatherman_locale)
     add_subdirectory(locales)
 endif()
