(LTH-139) Add permissions to download_file helper
Adds the option to specify permissions on the file created during a
download.

--- a/locales/leatherman.pot
+++ b/locales/leatherman.pot
@@ -34,9 +34,13 @@ msgstr ""
 msgid "Failed to open temporary file for writing"
 msgstr ""
 
+#: curl/src/client.cc
+msgid "Failed to modify permissions of temporary file"
+msgstr ""
+
 #. debug
 #: curl/src/client.cc
-msgid "download completed, now writing result to file"
+msgid "download completed, now writing result to file {1}"
 msgstr ""
 
 #: curl/src/client.cc
