(maint) Update help on permissions
Update documentation around supplying permissions. Prior comment was
based on eroneous testing where permissions were 0 due to static
initialization ordering issues.

--- a/locales/leatherman.pot
+++ b/locales/leatherman.pot
@@ -52,6 +52,7 @@ msgstr ""
 msgid "failed to move over the temporary file's downloaded contents"
 msgstr ""
 
+#. warning
 #: curl/src/client.cc
 msgid "Failed to properly clean-up the temporary file {1}"
 msgstr ""
