(LTH-149) Handle errors if child has exited before all writing finished
In pxp-agent testing, we periodically see `failed to run: stdin pipe i/o
failed: Broken pipe (32)` on AIX. This occurs when the executed script
doesn't consume stdin, and exits before we write stdin to the pipe.
Catch EPIPE on stdin and consider the pipe closed.

This new behavior is opt-in via the allow_stdin_unread flag.

--- a/locales/leatherman.pot
+++ b/locales/leatherman.pot
@@ -216,15 +216,18 @@ msgstr ""
 msgid "select call was interrupted and will be retried."
 msgstr ""
 
-#. error
+#. debug
 #: execution/src/posix/execution.cc
-#: execution/src/windows/execution.cc
-msgid "{1} pipe i/o failed: {2}."
+msgid "{1} pipe i/o was closed early, process may have ignored input."
 msgstr ""
 
 #. debug
 #: execution/src/posix/execution.cc
 msgid "{1} pipe i/o was interrupted and will be retried."
+msgstr ""
+
+#: execution/src/posix/execution.cc
+msgid "{1} pipe i/o failed: {2}"
 msgstr ""
 
 #: execution/src/posix/execution.cc
@@ -343,6 +346,11 @@ msgstr ""
 
 #: execution/src/windows/execution.cc
 msgid "failed to create read event."
+msgstr ""
+
+#. error
+#: execution/src/windows/execution.cc
+msgid "{1} pipe i/o failed: {2}."
 msgstr ""
 
 #. error
